--- a/style.css
+++ b/style.css
@@ -113,6 +113,11 @@ nav a:hover{
   height: 52.5px;
   width: 132px;
   border-radius: 0px 15px 15px 0px;
+  text-align: center;
+}
+
+.search-magnifying-glass{
+  display: none;
 }
 
 button:hover {
@@ -120,9 +125,7 @@ button:hover {
   cursor:pointer;
 }
 
-.text{
-  margin-top: 15px;;
-}
+
 .fa-search{
   visibility: hidden;
 }
@@ -165,7 +168,7 @@ button:hover {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 40px;
   margin-right: 20px;
   
 }
@@ -192,7 +195,7 @@ width: 160px;
   
 width: 130px;
 }
-.icon-filter .fa-dog{
+ .fa-dog{
   display: flex;
   align-items: center;
   color: #0065FC; 
@@ -201,7 +204,7 @@ width: 130px;
   margin-right: 5px;
 }
 
-.icon-filter .fa-money-bill-wave{
+.fa-money-bill-wave{
   display: flex;
   align-items: center;
   font-size: 16px;
@@ -209,7 +212,7 @@ width: 130px;
  margin-left: 10px;
  margin-right: 5px;
 }
-.icon-filter .fa-person{
+.fa-person{
   display: flex;
   align-items: center;
   font-size: 20px;
@@ -217,7 +220,7 @@ width: 130px;
   margin-left: 10px;
   margin-right: 5px;
 }
-.icon-filter .fa-heart{
+.fa-heart{
   display: flex;
   align-items: center;
   font-size: 18px;
@@ -760,6 +763,11 @@ nav a:hover{
 }
 
 .search-button{
+  display: none;
+}
+
+
+.search-magnifying-glass{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -773,7 +781,6 @@ nav a:hover{
   width: 132px;
   border-radius: 0px 15px 15px 0px;
 }
-
 button:hover {
   background-color: #0255d3;
   cursor:pointer;
