--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ nav a:hover{
     
 }
 .input::placeholder {
-  color:black;
+  color:rgb(0, 0, 0);
 }
 
 .search-button{
@@ -368,7 +368,9 @@ button:hover {
 
 
 .fa-chart-line{
-  font-size: 25px;
+  font-size: 18px;
+ 
+
   color: #0065FC;
 }
 
@@ -819,6 +821,7 @@ nav a:hover{
 .input::placeholder {
   color:black;
   overflow: hidden;
+  font-size: 16px;
 }
 
 .search-button{
@@ -880,6 +883,7 @@ button:hover {
 .lign-filtre{
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 .allcard-filter{
   display: flex;
@@ -893,8 +897,9 @@ button:hover {
   display: flex;
   align-items: center;
   height: 50px;
-  width: 100%;
+  width: 46%;
   margin-bottom: 17px;
+  margin-right: 0;
 }
 
 .card-filter:hover{
@@ -950,21 +955,28 @@ margin-right: 0;
 
 }
 .bloc-accommodation{
-width: auto;
 height: auto;
-margin-right: 20px;
-margin-left: 20px;
+margin-left: 22px ;
+margin-right: 22px;
 }
 
 .card-accommodation{
 background-color: #FFFFFF;
-width: 100%;
+width: 98%;
 height: 199px;
 border-radius: 20px;
 box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
 cursor: pointer;
 border:5px solid #ffffff;
 margin-bottom:12px;
+}
+
+.accommodation-section img{
+  object-fit: cover;
+  width: 100%;
+  height: 124px;
+  border-radius: 20px 20px 0 0;   
+  margin:auto;
 }
 
 span{  
